updated. add animation and script

--- a/Market Place/createAccount.css
+++ b/Market Place/createAccount.css
@@ -20,6 +20,18 @@
     cursor: pointer;
 }
 
+.nftsPage.close {
+    display: none;
+}
+
+.trends.close {
+    display: none;
+}
+
+.trends {
+    padding-bottom: 80px;
+}
+
 
 
 
