--- a/Create Account/createAccount.css
+++ b/Create Account/createAccount.css
@@ -1,46 +1,57 @@
-.createAccount{
-    display: flex;
-    gap: 30px 60px;
-    align-items: center;
+.createAccount {
+  display: flex;
+  gap: 30px 60px;
+  align-items: center;
 }
 
-.createAccountForm p{
-    margin: 10px 0 20px 0;
+.createAccountForm p {
+  margin: 10px 0 20px 0;
 }
 
-section form{
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
+#errorMessage {
+  position: absolute;
+  color: red;
+  font-size: 16px;
+  display: none;
+  font-family: Work Sans;
+  bottom: 60px;
+  left: 30px;
 }
 
-img{
-    width: 100%;
+section form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  position: relative;
 }
 
-form .caBlock{
-    padding: 16px 20px;
-    border-radius: 20px;
-    background: #fff;
+img {
+  width: 100%;
 }
 
-input{
-    outline: none;
-    border: none;
-    font-size: 16px;
+form .caBlock {
+  padding: 16px 20px;
+  border-radius: 20px;
+  background: #fff;
 }
 
-section .pinkBut{
-    margin-top: 15px;
+input {
+  outline: none;
+  border: none;
+  font-size: 16px;
 }
 
-section{
-    padding: 0 calc(10vw - 11px) ;
+section .pinkBut {
+  margin-top: 15px;
+}
+
+section {
+  padding: 0 calc(10vw - 11px);
 }
 
 @media (max-width: 700px) {
-    .createAccount{
-        flex-wrap: wrap;
-        margin-bottom: 20px;
-    }
+  .createAccount {
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+  }
 }
